# django_project

./: .gitignore  Readme.md  catalog_fixture.json  pyproject.toml
catalog/: admin.py  models.py  urls.py  views.py
catalog/management/commands/: add_products.py
catalog/migrations/: 0001_initial.py
catalog/templates/catalog/: basic_design.html  contacts.html
config/: settings.py  urls.py
