[tool.poetry]
name = "django-project"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.2"
black = "^24.10.0"
flake8 = "^7.1.1"
requests = "^2.32.3"
psycopg2 = "^2.9.10"
python-dotenv = "^1.0.1"
pillow = "^10.4.0"
ipython = "^8.28.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
